--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-the-mask": "^0.11.1",
     "vue-toast-notification": "0.0.3",
     "vue-viacep": "^1.0.3",
+    "vuejs-clipper": "^1.1.7",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
   },
